crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__chrome__commit_dialog_actions_use_the_enabled_control_style.snap
---
source: crates/diffo-app/src/diff/rendering_tests/chrome.rs
expression: "buffer_region(terminal.backend().buffer(), editor_area)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 56, height: 11 },
    content: [
        "┌ Commit message ──────────────────────────────────────┐",
        "│ ┌──────────────────────────────────────────────────┐ │",
        "│ │x                                                 │ │",
        "│ └──────────────────────────────────────────────────┘ │",
        "│                                                      │",
        "│     [ Commit (Enter) ]         [ Cancel (Esc) ]      │",
        "│                                                      │",
        "│                                                      │",
        "│                                                      │",
        "│                Click outside to close                │",
        "└──────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 54, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
