crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__chrome__divergent_sync_is_enabled_and_clickable.snap
---
source: crates/diffo-app/src/diff/rendering_tests/chrome.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 6 },
    content: [
        "┌ Commit message ─────────────────────┐",
        "│Type a message…                       │",
        "└──────────────────────────────────────┘",
        "                [ Sync ]                ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 0, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
