crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__chrome__error_toasts_render_embedded_newlines_as_inert_text.snap
---
source: crates/diffo-app/src/diff/rendering_tests/chrome.rs
expression: "buffer_region(terminal.backend().buffer(), Rect::new(55, 24, 44, 4),)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 44, height: 4 },
    content: [
        "┌─────────────────────────────────────────×┐",
        "│Push failed␊accept remote output?         │",
        "│detail␊next line                          │",
        "└──────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 0, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 43, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: LightRed, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: LightRed, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
