crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__chrome__fixed_commit_composer_action_uses_the_enabled_control_style.snap
---
source: crates/diffo-app/src/diff/rendering_tests/chrome.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 5 },
    content: [
        "┌Commit message────────────────────────┐",
        "│Update 1 file                         │",
        "└──────────────────────────────────────┘",
        "           [ Commit (Enter) ]           ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
