crates/diffo-app/src/diff/rendering_tests/snapshots/diffo_app__diff__rendering_tests__chrome__renders_and_hit_tests_a_bottom_right_toast.snap
---
source: crates/diffo-app/src/diff/rendering_tests/chrome.rs
expression: "buffer_region(terminal.backend().buffer(), Rect::new(55, 25, 44, 3),)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 44, height: 3 },
    content: [
        "┌─────────────────────────────────────────×┐",
        "│Committed a1b2c3d                         │",
        "└──────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 0, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 43, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: LightGreen, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
